# LetsWork

./: .gitignore  CLAUDE.md  README.md  audit.md  pyproject.toml  server.json
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  spec.md  tasks.md
letswork/: __init__.py  approval.py  cli.py  events.py  filelock.py  launcher.py  proxy.py  remote_client.py  server.py  tunnel.py
letswork/tui/: __init__.py  app.py  approval_panel.py  chat.py  chat_app.py  file_tree.py
src/: approval.py  auth.py  cli.py  events.py  launcher.py  remote_client.py  server.py  tunnel.py
src/tui/: app.py  approval_panel.py  chat.py  file_tree.py  file_viewer.py  guest_app.py  terminal_panel.py
tests/: test_auth.py  test_filelock.py  test_server.py  test_tunnel.py
