[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letswork"
version = "0.1.3"
description = "Real-time collaborative coding via MCP — two developers, one codebase"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
authors = [{ name = "Sai Charan Rajoju" }]
dependencies = [
    "mcp[cli]>=1.0.0",
    "click>=8.1.0",
    "textual[syntax]>=0.50.0",
    "websockets>=12.0"
]

[project.scripts]
letswork = "letswork.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["letswork"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["letswork*"]
